examples/test/testpolicy14086.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14086
  namespace: namespace299
spec:
  podSelector:
    matchLabels:
      key44: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value26
          key44: value31
      podSelector:
        matchLabels:
          key21: value7
          key11: value1
